[package]
name = "fht2p"
version = "0.9.0" # alpha<alpha.1<beta<rc
authors = ["Wspsxing <biluohc@qq.com>"]
description = "A HTTP Server for Static File written with Rust"
build = "build.rs"
license = "MIT"
edition = "2018"

[workspace]

[profile.release]
opt-level = 3
# lto = true
# debug = true 

[dev-dependencies]
reqwest = { version = "0.10.0", default-features = false, features = ["rustls-tls", "cookies", "stream", "gzip"] }

[build-dependencies]
chrono  = { version = "0.4.10", features = ["serde"] }
rsass = "0.12"

[dependencies]
nonblock-logger = { version = "0.1", features = [ "color", "dbg" ] }
serde = { version = "1.0.102", features = ["derive"] }
chrono = { version = "0.4.10", features = ["serde"] }
json5 = "0.2.5"
systemstat = "0.1.5"
lazy_static = "1.3.0"
thiserror = "1.0.9"
anyhow = "1.0.25"
clap = "2.33.0"

tokio = { version = "0.2.5", features = ["full"] }
tokio-rustls = "0.12.1"
futures = "0.3.1"
num_cpus = "1.11.1"

http = "0.2.0"
httparse = "1.3.4"
hyper = { version = "0.13.1", features = ["stream"] }
bytesize = "1.0.0"
bytes = "0.5"
percent-encoding = "2.1.0"
tower-service = "0.3.0"
mime_guess = "2.0.1"
askama = "0.8.0"
regex = "1.3.1"
rand = "0.7.2"
nom = "5.0.1"

